# cmake_ExternalProject_demo

./: CMakeLists.txt  README.md
c++/src/: main.cpp  orc_read_test.cpp
cmake_modules/: FindORC.cmake
